@@ -1,5 +1,7 @@
 2000-07-18  Eric Melski  <ericm@ajubasolutions.com>
 
+	* library/tkfbox.tcl: Fixed keyboard navigation in the iconlist.
+
 	* unix/configure.in (MAKE_LIB): Corrected definition of MAKE_LIB
 	for shared builds, with patch from Mike Hopkirk.
 	
